# community

./: .gitignore  Cargo.toml  README.md
data/: init_postgres.sh  pg_options.sh  start_postgres.sh  stop_postgres.sh  teardown_postgres.sh
lib/: lib.rs
lib/checklists/: mod.rs  types.rs
lib/checklists/db/: mod.rs  models.rs
lib/db/: mod.rs
lib/finder/: checklist.rs  mod.rs
lib/finder/checklists/: types.rs
lib/finder/checklists/db/: models.rs
lib/finder/db/: checklist.rs  mod.rs  pgtypes.rs
lib/finder/pgtypes/: checklists.rs  mod.rs  requirements.rs
lib/finder/programs/: mod.rs
lib/finder/requirements/: types.rs
lib/finder/requirements/db/: mod.rs  models.rs
lib/models/: mod.rs
lib/org/: mod.rs
lib/pgtypes/: requirements.rs
lib/programs/: mod.rs
lib/requirements/: mod.rs
lib/requirements/db/: models.rs
lib/user/: mod.rs
lib/web/: macros.rs  mod.rs  orgs.rs
migrations/20160221172005_create_requirements_schema/: down.sql  up.sql
src/: main.rs
src/finder/: macros.rs  mod.rs  req.rs
src/finder2/: checklist.rs
src/user/: mod.rs
tests/: checklists.rs  db.rs  requirements.rs  test.rs
