[package]
name = "community"
version = "0.1.0"
authors = ["bsundsrud <benn.sundsrud@gmail.com>"]

[lib]
name = "community"
path = "lib/lib.rs"
test = false
bench = false

[[bin]]
name = "community"
path = "src/main.rs"

[[test]]
name = "test"
path = "tests/test.rs"


[dependencies]
postgres = "0.11"
postgres_array = "0.6.1"
dotenv = "0.8.0"
pgx = { git = "https://github.com/bsundsrud/rust-pgx/" }
