[package]
name = "community"
version = "0.1.0"
authors = ["bsundsrud <benn.sundsrud@gmail.com>"]

[lib]
name = "community"
path = "lib/lib.rs"
test = false
bench = false

[[bin]]
name = "community"
path = "src/main.rs"

[[test]]
name = "test"
path = "tests/test.rs"


[dependencies]
r2d2 = "*"
r2d2_postgres = "*"
postgres = "0.11"
postgres_array = "0.6.1"
dotenv = "0.8.0"
pgx = { git = "https://github.com/bsundsrud/rust-pgx/" }
logger = { git = "https://github.com/iron/logger.git" }
iron = "0.2.6"
persistent = "0.0.6"
router = "*"
mount = "*"
rustc-serialize = "*"
log = "0.3"
env_logger = "0.3"
